Update footer text and chart colors

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
   <button class="toggle-dark" onclick="toggleDarkMode()">🌙</button>
 
-  <footer>© 2025 جميع الحقوق محفوظة | تطوير: أحمد هاني 💻</footer>
+  <footer>Designed & Developed by : Ahmed Hany Sayed Ahmed Abdel Wahab © 2025💻</footer>
 
   <script>
     const { jsPDF } = window.jspdf;
@@ -350,7 +350,7 @@
       type:"bar",
       data:{ labels:Object.keys(sectionData),
         datasets:[{ label:"المهام المنجزة حسب القسم", data:Object.values(sectionData),
-          backgroundColor:["#4a90e2","#5cb85c","#f0ad4e","#d9534f"], borderRadius:8 }]
+          backgroundColor:["#4a90e2","#6ceec2","#f0ad4e","#d9534f"], borderRadius:8 }]
       },
       options:{ scales:{ y:{ beginAtZero:true } } }
     });
