--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       if (password === "12345") { // غيّرها بكلمة السر اللي انت عايزها
         window.location.href = "Home.html";
       } else {
-        alert("😅 كلمة السر غلط يا نجم!");
+        alert("🤣🤣😂😂 انت مش عارف كلمة السر ولا ايه !");
       }
     }
   </script>
