Fix duplicate favicon link in index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="icon" href="favicon.ico" type="image/ico">
 
   <title>🔐 Login</title>
+  <link rel="icon" href="favicon.ico" type="image/ico">
+
   <style>
     /* 🎨 خلفية متدرجة أنيقة */
     body {
