--- a/Home.html
+++ b/Home.html
@@ -252,13 +252,17 @@
 </head>
 <body>
 
-  <header>📅 مهامي اليومية</header>
 
-
+   <header>
+   <span> 📅 مهامي اليومية </span>
 
  <div class="link-btn">
       <a href="https://ah9742824-oss.github.io/my-project/" target="_blank" title="زيارة المشروع">🌐</a>
     </div>
+
+  
+
+</header>
 
   
   <nav>
