Remove emoji from title and header text

--- a/Home.html
+++ b/Home.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600&display=swap" rel="stylesheet">
 
   
-  <title>📊 مهامي اليومية</title>
+  <title> مهامي اليومية</title>
     <link rel="icon" href="favicon.ico" type="image/ico">
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -254,7 +254,7 @@
 
 
    <header>
-   <span> 📅 مهامي اليومية </span>
+   <span>  مهامي اليومية </span>
 
  <div class="link-btn">
       <a href="https://ah9742824-oss.github.io/my-project/" target="_blank" title="زيارة المشروع">🌐</a>
