--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico" type="image/ico">
 
-  <title>🔐 Login</title>
+  <title> Login</title>
 
   <style>
     /* 🎨 خلفية متدرجة أنيقة */
