--- a/Home.html
+++ b/Home.html
@@ -230,23 +230,37 @@
 
 
     
-    .link-btn {
-      text-align: center;
-    }
-    .link-btn a {
-      display: inline-block;
-      background: linear-gradient(135deg, #4f46e5, #6366f1);
-      color: white;
-      padding: 5px 5px;
-      border-radius: 10px;
-      text-decoration: none;
-      font-size: 16px;
-      font-weight: bold;
-      transition: 0.3s;
-    }
-    .link-btn a:hover {
-      background: linear-gradient(135deg, #3730a3, #4f46e5);
-    }
+.link-btn {
+  
+  text-align: center;
+  margin: 20px 0px;
+  position: fixed;
+    top: -9px;
+    left: 5px;
+  
+  
+}
+
+.link-btn a {
+  display: inline-block;
+  background: linear-gradient(135deg, #4f46e5, #6366f1);
+  color: white;
+  padding: 5px 5px;
+  border-radius: 10px;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.link-btn a:hover {
+  background: linear-gradient(135deg, #3730a3, #4f46e5);
+}
+
+
+
+    
+
   </style>
 </head>
 <body>
